# cidr-calc

./: Cargo.toml  README.md  index.html  syntax.pest
.github/workflows/: test.yml
cidr-calc/: Cargo.toml  LICENSE
cidr-calc-web/: Cargo.toml
cidr-calc-web/src/: lib.rs
cidr-calc/src/: data.rs  lib.rs  parser.rs
examples/: let.txt  remove_single.txt  remove_single_reverse.txt  remove_single_v6.txt  test.txt
pkg/: cidr_calculator_web.d.ts  cidr_calculator_web.js  cidr_calculator_web_bg.wasm  cidr_calculator_web_bg.wasm.d.ts  package.json
src/: data.rs  eval.rs  main.rs  parser.rs  syntax.pest
