[package]
name = "cidr-calc"
version = "0.1.0"
edition = "2021"
description = "CIDR addition / subtraction calculator. Maybe useful for setting route tables when metrics are not available (e.g. wireguard next-hop)"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/CircuitCoder/cidr-calc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
im = "15.1.0"
pest = "2.7.4"
pest_derive = "2.7.4"
rustyline = "12.0.0"
