[package]
name = "cidr-calculator"
version = "0.2.0"
edition = "2021"
description = "CIDR addition / subtraction calculator. Maybe useful for setting route tables when metrics are not available (e.g. wireguard next-hop)"
license = "MIT"
repository = "https://github.com/CircuitCoder/cidr-calc"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
im = "15.1.0"
pest = "2.7.4"
pest_derive = "2.7.7"
rustyline = { version = "12.0.0", optional = true }
clap = { version = "4.5.1", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["dep:rustyline", "dep:clap"]

[[bin]]
name = "cidr-calculator"
required-features = ["cli"]
